src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_12_errors.snap
---
source: src/parser/test.rs
description: "if (x) { x } else { @ }"
expression: "parser_errors(\"if (x) { x } else { @ }\", errors)"
---
if (x) { x } else { @ }
                    ^ SyntaxError: Unexpected '@'.
